project migration to Java 17